package com.p1_7.abstractengine.managers;

public class MovementManager implements IManager{
    @Override
    public void init() {}

    @Override
    public void update(float deltaTime) {}

    @Override
    public void shutdown() {}
}
