@startuml engine-core

' ============================================================================
' engine core package - orchestration and manager hierarchy
' ============================================================================
' this diagram focuses on the core engine orchestration and the manager
' base class hierarchy that provides lifecycle management for all subsystems
' ============================================================================

' styling
skinparam classBackgroundColor<<interface>> #E3F2FD
skinparam classBackgroundColor<<abstract>> #FFF9C4
skinparam classBackgroundColor<<concrete>> #E8F5E9
skinparam classBackgroundColor<<external>> #EEEEEE
skinparam classBorderColor #424242
skinparam arrowColor #424242
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 70

' ============================================================================
' core interfaces
' ============================================================================

interface IManager <<interface>> {
  + init(): void
  + shutdown(): void
}

interface IUpdatable <<interface>> {
  + update(deltaTime: float): void
}

note right of IManager
  **lifecycle contract**
  - all managers implement init/shutdown
  - ensures proper resource management
  - engine orchestrates lifecycle
end note

note right of IUpdatable
  **update contract**
  - frame-based update loop
  - deltaTime for frame-independent logic
  - registered with engine
end note

' ============================================================================
' manager base classes
' ============================================================================

abstract Manager <<abstract>> {
  - initialised: boolean
  + init(): void {final}
  + shutdown(): void {final}
  # onInit(): void
  # onShutdown(): void
  + isInitialised(): boolean
}

abstract UpdatableManager <<abstract>> {
  + update(deltaTime: float): void {final}
  # onUpdate(deltaTime: float): void {abstract}
}

note bottom of Manager
  **template method pattern**

  lifecycle hooks:
  - init() → onInit() (protected hook)
  - shutdown() → onShutdown() (protected hook)

  benefits:
  - consistent lifecycle management
  - subclasses override protected hooks
  - final methods prevent misuse
  - tracks initialisation state

  usage:
  1. subclass Manager
  2. override onInit() and onShutdown()
  3. engine calls init() before use
  4. engine calls shutdown() on cleanup
end note

note bottom of UpdatableManager
  **updatable extension**

  update pattern:
  - extends Manager with update capability
  - update() → onUpdate(deltaTime)
  - onUpdate() is abstract

  registered managers:
  - MovementManager
  - CollisionManager
  - InputOutputManager
  - SceneManager
end note

' ============================================================================
' engine orchestrator
' ============================================================================

class Engine <<concrete>> {
  - managers: Array<IManager>
  - updatables: Array<IUpdatable>
  - renderManager: RenderManager
  + registerManager(manager: IManager): void
  + registerUpdatable(updatable: IUpdatable): void
  + setRenderManager(renderManager: RenderManager): void
  + init(): void
  + update(deltaTime: float): void
  + render(): void
  + shutdown(): void
}

note left of Engine
  **central orchestrator**

  responsibilities:
  - manages all subsystem managers
  - coordinates lifecycle (init → update → shutdown)
  - delegates update to updatable managers
  - delegates rendering to RenderManager

  lifecycle flow:
  1. register all managers
  2. init() - initialise all managers
  3. game loop:
     - update(deltaTime) - update all updatables
     - render() - render via RenderManager
  4. shutdown() - cleanup all managers

  design notes:
  - composition over inheritance
  - managers registered dynamically
  - render manager separate (not updatable)
end note

' ============================================================================
' settings configuration
' ============================================================================

class Settings <<concrete>> {
  + {static} WINDOW_WIDTH: int = 640
  + {static} WINDOW_HEIGHT: int = 480
}

note bottom of Settings
  **global configuration**
  - static constants for window size
  - used by rendering system
  - can be extended for other settings
end note

' ============================================================================
' relationships
' ============================================================================

Manager ..|> IManager
UpdatableManager --|> Manager
UpdatableManager ..|> IUpdatable

Engine *-- "many" IManager : manages
Engine *-- "many" IUpdatable : updates

' ============================================================================
' example manager implementations (referenced)
' ============================================================================

class EntityManager <<manager>> {
  ...
}

class RenderManager <<manager>> {
  ...
}

class MovementManager <<manager>> {
  ...
}

class CollisionManager <<manager>> {
  ...
}

class InputOutputManager <<manager>> {
  ...
}

class SceneManager <<manager>> {
  ...
}

EntityManager --|> Manager
RenderManager --|> Manager
MovementManager --|> UpdatableManager
CollisionManager --|> UpdatableManager
InputOutputManager --|> UpdatableManager
SceneManager --|> UpdatableManager

note right of EntityManager
  **manager implementations**

  non-updatable managers:
  - EntityManager (manages entities)
  - RenderManager (rendering pipeline)

  updatable managers:
  - MovementManager (physics updates)
  - CollisionManager (collision detection)
  - InputOutputManager (input polling)
  - SceneManager (scene transitions)

  see individual package diagrams
  for detailed implementations
end note

' ============================================================================
' usage example
' ============================================================================

note as UsageExample
  **usage example**

  {
    // create engine
    Engine engine = new Engine();

    // create and register managers
    EntityManager entityManager = new EntityManager();
    RenderManager renderManager = new RenderManager();
    MovementManager movementManager = new MovementManager();
    CollisionManager collisionManager = new CollisionManager();
    InputOutputManager inputManager = new InputOutputManager();
    SceneManager sceneManager = new SceneManager(
      entityManager,
      renderManager.getRenderQueue(),
      inputManager
    );

    // register with engine
    engine.registerManager(entityManager);
    engine.registerManager(renderManager);
    engine.registerManager(movementManager);
    engine.registerManager(collisionManager);
    engine.registerManager(inputManager);
    engine.registerManager(sceneManager);

    // register updatables
    engine.registerUpdatable(movementManager);
    engine.registerUpdatable(collisionManager);
    engine.registerUpdatable(inputManager);
    engine.registerUpdatable(sceneManager);

    // set render manager
    engine.setRenderManager(renderManager);

    // initialise all subsystems
    engine.init();

    // game loop
    while (running) {
      float deltaTime = getDeltaTime();
      engine.update(deltaTime);
      engine.render();
    }

    // cleanup
    engine.shutdown();
  }
end note

@enduml
